--- a/.github/workflows/infra_setup.yaml
+++ b/.github/workflows/infra_setup.yaml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
+        env:
+        TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
 
       - name: Terraform Validate
         run: terraform validate
