--- a/.github/workflows/infra_setup.yaml
+++ b/.github/workflows/infra_setup.yaml
@@ -4,6 +4,14 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
+
+permissions:
+  id-token: write
+  contents: read
+  secrets: read
 
 jobs:
   terraform:
